--- a/AzureBlobProject/Views/Container/Index.cshtml
+++ b/AzureBlobProject/Views/Container/Index.cshtml
@@ -15,35 +15,35 @@
     <div>
         @if (Model.Count() > 0)
         {
-                <table class="table table-striped border">
-                    <tr class="table-secondary">
-                        <th>
-                            Container Name
-                        </th>
-                        <th></th>
-                    </tr>
+            <table class="table table-striped border">
+                <tr class="table-secondary">
+                    <th>
+                        Container Name
+                    </th>
+                    <th></th>
+                </tr>
                 @foreach (var item in Model)
                 {
-                            <tr>
-                                <td>
+                    <tr>
+                        <td>
                             @Html.DisplayFor(m => item)
-                                </td>
-                                <td>
-                                    <a class="btn btn-primary text-white" asp-action="Manage" asp-controller="Blob" asp-route-containerName="@item">
-                                     Manage
-                                    </a>
+                        </td>
+                        <td>
+                            <a class="btn btn-primary text-white" asp-action="Manage" asp-controller="Blob" asp-route-containerName="@item">
+                                Manage
+                            </a>
 
-                                    <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item">
-                                       Delete
-                                    </a>
-                                </td>
-                            </tr>
+                            <a class="btn btn-danger text-white" asp-action="Delete" asp-route-containerName="@item">
+                                Delete
+                            </a>
+                        </td>
+                    </tr>
                 }
-                </table>
+            </table>
         }
         else
         {
-                <p>No category exists...</p>
+            <p>No category exists...</p>
         }
     </div>
 </div>
